@@ -1,6 +1,6 @@
 Package: mia
 Type: Package
-Version: 1.1.19
+Version: 1.1.20
 Authors@R:
     c(person(given = "Felix G.M.", family = "Ernst", role = c("aut", "cre"),
              email = "felix.gm.ernst@outlook.com",
@@ -75,6 +75,7 @@ Suggests:
     reldist,
     ade4,
     microbiomeDataSets,
+    MultiAssayExperiment,
     rmarkdown
 URL: https://github.com/microbiome/mia
 BugReports: https://github.com/microbiome/mia/issues
