@@ -168,7 +168,6 @@ importFrom(IRanges,LogicalList)
 importFrom(IRanges,NumericList)
 importFrom(IRanges,relist)
 importFrom(MASS,isoMDS)
-importFrom(MultiAssayExperiment,MultiAssayExperiment)
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,SimpleList)
